# ROS2_Whisper_Bridge

./: 404.html  CMakeLists.txt  README.md  colcon.pkg  cyclonedds.xml  index.html  mkdocs.yml  package.xml  pixi.toml  setup_ros_tailscale.sh
about/implementation/: index.html
contributing/license/: index.html
contributing/rules/: index.html
docs/usage/: ros2_pixi_build_linux.md
launch/: whisper_bridge.launch.py
msg/: AudioDataStamped.msg  AudioInfo.msg  VoiceActivity.msg
src/: audio_bridge_node.cpp  audio_bridge_node.hpp
usage/overview/: index.html
usage/ros2_pixi_build_linux_windows/: index.html
usage/usage_with_native_linux/: index.html
